argocd-deploy/ingress-argocd-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  namespace: argocd
  annotations:
    kubernetes.io/ingress.class: "traefik"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.middlewares: traefik-internal-clients-only@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - argocd.w386.k8s.my.lan
      secretName: argocd-vault-acme-tls
  rules:
    - host: argocd.w386.k8s.my.lan
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 80
